html framework and script outline

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 		<script src="script.js"></script>
 	</head>
 
-	<body></body>
+	<body>
+		<h1>Coding Quiz</h1>
+		<main id="content">
+			<p id="instructions"></p>
+			<button type="button" id="start">Start</button>
+		</main>
+	</body>
 </html>
