html structure, activate start button, show first question

--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Code Quiz</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<script src="script.js"></script>
+		<script
+			src="https://code.jquery.com/jquery-3.4.1.js"
+			integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+			crossorigin="anonymous"
+		></script>
 	</head>
 
 	<body>
 		<h1>Coding Quiz</h1>
 		<main id="content">
-			<p id="instructions"></p>
+			<p>Instructions for quiz here.</p>
 			<button type="button" id="start">Start</button>
 		</main>
+		<script src="script.js"></script>
 	</body>
 </html>
