--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title>Code Quiz</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script
-			src="https://code.jquery.com/jquery-3.4.1.js"
-			integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+			src="https://code.jquery.com/jquery-3.4.1.min.js"
+			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			crossorigin="anonymous"
 		></script>
 	</head>
@@ -18,6 +18,10 @@
 			<p>Instructions for quiz here.</p>
 			<button type="button" id="start">Start</button>
 		</main>
+		<div id="timer">
+			<span>Time: </span>
+			<span id="countdown"></span>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
