--- a/index.html
+++ b/index.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Code Quiz</title>
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<!-- Required meta tags -->
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+
+		<!-- Bootstrap CSS -->
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+			crossorigin="anonymous"
+		/>
+
+		<title>JavaScript Coding Quiz!</title>
+	</head>
+	<body class="container my-5 mx-auto">
+		<h1 class="text-center">JavaScript Quiz</h1>
+		<main class="card w-75 mx-auto my-5 p-4" id="content">
+			<p>
+				The following multiple choice questions are meant to test your
+				understanding of basic JavaScript concepts. Try to answer all the
+				questions before time runs out. You will lose 10 seconds of time for
+				each wrong answer.
+			</p>
+			<button type="button" class="btn btn-info" id="start">
+				Start
+			</button>
+		</main>
+		<!-- Scripts -->
 		<script
-			src="https://code.jquery.com/jquery-3.4.1.min.js"
-			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 			crossorigin="anonymous"
 		></script>
-	</head>
-
-	<body>
-		<h1>Coding Quiz</h1>
-		<main id="content">
-			<p>Instructions for quiz here.</p>
-			<button type="button" id="start">Start</button>
-		</main>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+			crossorigin="anonymous"
+		></script>
 		<script src="script.js"></script>
 	</body>
 </html>
